# hermes-claude-code-fusion

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.HERMES.md  README.md  SKILL.md  USE_CASES.md  claude_core.py  pyproject.toml
.github/workflows/: ci.yml  hello.yml  main.yml
tests/: test_extreme.py  test_integration.py
