[project]
name = "claude-code-fusion"
version = "0.1.0"
description = "Claude Code Fusion with Hermes Agent - Harmony Architecture (纯 Python 实现)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "walle-wangzan", email = "your.email@example.com"}
]
keywords = [
    "claude-code",
    "hermes-agent",
    "ai-coding",
    "llm",
    "tool-use",
    "harmony-architecture"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
requires-python = ">=3.11"
dependencies = []  # 纯 Python，无外部依赖！

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0"
]

[project.urls]
"Homepage" = "https://github.com/walle-wangzan/hermes-claude-code-fusion"
"Bug Tracker" = "https://github.com/walle-wangzan/hermes-claude-code-fusion/issues"
"Documentation" = "https://github.com/walle-wangzan/hermes-claude-code-fusion/blob/main/SKILL.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by line-length)
    "B008",  # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"